--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,11 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-*.xcworkspace
 !default.xcworkspace
 xcuserdata
-profile
 *.moved-aside
 DerivedData
 .idea/
 
 # Pods - for those of you who use CocoaPods
-Pods
+Pods/
