Use ionicons-iOS to render icon via fonts, add likesTab, add likeBtn to workview.

--- a/xcz/xcz-Info.plist
+++ b/xcz/xcz-Info.plist
@@ -28,6 +28,10 @@
 	<string>116</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ionicons.ttf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
