--- a/xcz/xcz-Info.plist
+++ b/xcz/xcz-Info.plist
@@ -26,6 +26,20 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>132</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>381afd6764f80d23443d620e7747e03f867c0ac3</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
