--- a/xcz/xcz-Info.plist
+++ b/xcz/xcz-Info.plist
@@ -51,7 +51,7 @@
 		<string>armv7</string>
 	</array>
 	<key>UIStatusBarHidden</key>
-	<true/>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
